--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,6 @@
-// layout 
-$primary: #3300FF;
-$background: #FFFFFF; 
+// layout
+$primary: #393ad9;
+$background: #ffffff;
 
 // typography
 $text-primary: #000000;
