--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -14,6 +14,7 @@ html {
 
 ul {
   margin: 0px;
+  padding: 0px;
 }
 
 a {
